// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. follows imports 1`] = `
"
import fred from 'glamorous'
fred.div({fontSize: 10})

    👇

import fred from 'glamorous'
fred.div(\\"css-1ea0ufb\\")

.css-1ea0ufb,
[data-css-1ea0ufb] {
  font-size: 10px;
}
"
`;

exports[`2. follows requires 1`] = `
"
const ethel = require('glamorous')
ethel.span({fontSize: 25})

    👇

const ethel = require('glamorous')
ethel.span(\\"css-1rbjb59\\")

.css-1rbjb59,
[data-css-1rbjb59] {
  font-size: 25px;
}
"
`;

exports[`3. supports statics in arrow functions 1`] = `
"
import glamorous from 'glamorous'

glamorous.div(
  ({big}) =>
    (big
      ? {
          fontSize: 20,
        }
      : {
          fontSize: 12,
        })
)

    👇

import glamorous from 'glamorous'

glamorous.div(
  ({big}) =>
    (big
      ? \\"css-vfrxuj\\"
      : \\"css-1dmiui7\\")
)

.css-vfrxuj,
[data-css-vfrxuj] {
  font-size: 20px;
}

.css-1dmiui7,
[data-css-1dmiui7] {
  font-size: 12px;
}
"
`;

exports[`4. follows references 1`] = `
"
import glamorous from 'glamorous'

const styles = {color: 'palevioletred'}

glamorous.div(styles)

    👇

import glamorous from 'glamorous'

const styles = \\"css-zij22n\\"

glamorous.div(styles)

.css-zij22n,
[data-css-zij22n] {
  color: palevioletred;
}
"
`;

exports[`5. when creating custom glamorous components 1`] = `
"
import g from 'glamorous'

g('div')({margin: 2})

    👇

import g from 'glamorous'

g('div')(\\"css-18570p2\\")

.css-18570p2,
[data-css-18570p2] {
  margin: 2px;
}
"
`;

exports[`6. styles using member expressions 1`] = `
"
import glamorous from 'glamorous'

const colors = {
  primary: 'red',
  secondary: 'blue',
}

glamorous.p({color: colors.primary})

    👇

import glamorous from 'glamorous'

const colors = {
  primary: 'red',
  secondary: 'blue',
}

glamorous.p(\\"css-1ezp9xe\\")

.css-1ezp9xe,
[data-css-1ezp9xe] {
  color: red;
}
"
`;

exports[`7. styles using variables across files 1`] = `
"
import glamorous from 'glamorous'
import {colors as col} from './styles'

glamorous.p({color: col.primary})

    👇

import glamorous from 'glamorous'
import {colors as col} from './styles'

glamorous.p(\\"css-1ezp9xe\\")

.css-1ezp9xe,
[data-css-1ezp9xe] {
  color: red;
}
"
`;
